# bevy_outline_post_process

./: Cargo.toml  README.md
.github/workflows/: docs.yml
assets/shaders/: outline_post_process.wgsl
src/: components.rs  lib.rs  nodes.rs  resources.rs
